fix link spacings

--- a/css/main.css
+++ b/css/main.css
@@ -287,19 +287,17 @@ body, h1, p, a, ul, li, div {
 
 .link-container {
   position: relative;
-  padding: 1vh 1vw 1vh 0;
-  margin-right: 6vw;
+  display: flex;
+  align-items: center;
+  padding: 1vh 2vw 1vh 0;
   cursor: pointer;
   height: 5vh;
 }
 
 .link-icon {
-  position: absolute;
   height: 4vh;
   width: 4vh;
-  margin: auto;
-  top: 0;
-  bottom: 0;
+  margin-right: 1vw;
   background-size: contain;
   background-repeat: no-repeat;
   transition: 0.3s ease;
@@ -311,8 +309,6 @@ body, h1, p, a, ul, li, div {
 
 .links {
   position: relative;
-  top: 3px;
-  left: 6vh;
 }
 
 .link-container:hover .links {
@@ -484,7 +480,7 @@ body, h1, p, a, ul, li, div {
 
 .contact-links {
   display: flex;
-  justify-content:flex-start;
+  justify-content: flex-start;
 }
 
 .linkedin-icon {
